Replaced price with moneyness

--- a/options.ipynb
+++ b/options.ipynb
@@ -65,6 +65,7 @@
     "dates = {}\n",
     "strikes = []\n",
     "implied_vol = []\n",
+    "price_date = {}\n",
     "for i in tqdm(range(len(df))):\n",
     "    key = df.iloc[i][\"quote_date\"]\n",
     "    exp_date = df.iloc[i][\"expire_date\"]\n",
@@ -75,9 +76,11 @@
     "        keys.append(key)\n",
     "        \n",
     "        dates[key] = [(exp_date,strike,implied_vol)]\n",
+    "        price_date[key] = df.iloc[i][\"underlying_last\"]\n",
     "        continue\n",
     "\n",
     "    dates[key].append((exp_date,strike,implied_vol))\n",
+    "    \n",
     "del df"
    ]
   },
@@ -101,6 +104,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import math\n",
     "num_points = 20\n",
     "\n",
     "\n",
@@ -126,7 +130,7 @@
     "\n",
     "\n",
     "\n",
-    "    x_min, z_min = 50, 0\n",
+    "    x_min, z_min = 0, 0\n",
     "    x_max, z_max = 300, 365\n",
     "\n",
     "    vol_linspace = np.linspace(0, 1,num_points) \n",
@@ -164,13 +168,19 @@
     "    strike_prices = grid_points['x'].unique()\n",
     "    time_to_expiry = grid_points['z'].unique()\n",
     "    X, Y = np.meshgrid(strike_prices, time_to_expiry)\n",
-    "    X[X > x_max] = x_max\n",
-    "    X[X < x_min] = x_min\n",
-    "    \n",
     "\n",
+    "    X = X / price_date[keys[quote_time]]\n",
+    "    x_min = 0\n",
+    "    x_max = 5\n",
+    "    X[X < x_min] = x_min\n",
+    "    X[X > x_max] = x_max\n",
     "    Z = grid_points.set_index(['x', 'z'])['y'].unstack()\n",
-    "    Z[Z < 0] = 0\n",
-    "    Z[Z > 1] = 1\n",
+    "    def sigmoid(value):\n",
+    "        return (1 / (1 + np.exp(-value)) - .5)*2\n",
+    "\n",
+    "    Z = sigmoid(Z.to_numpy())\n",
+    "    # Z[Z < 0] = 0\n",
+    "    # Z[Z > 1] = 1\n",
     "    Y[Y < z_min] = z_min\n",
     "    Y[Y > z_max] = z_max\n",
     "\n",
@@ -181,14 +191,32 @@
     "    # Plot the surface\n",
     "    ax.plot_surface(X, Y, Z, cmap='viridis', alpha=0.7)\n",
     "\n",
+    "\n",
+    "\n",
+    "    # point  = np.array([price_date[keys[quote_time]],z_min,0])\n",
+    "    # normal = np.array([price_date[keys[quote_time]],z_max,1])\n",
+    "\n",
+    "    # a plane is a*x+b*y+c*z+d=0\n",
+    "    # [a,b,c] is the normal. Thus, we have to calculate\n",
+    "    # d and we're set\n",
+    "    # d = -point.dot(normal)\n",
+    "\n",
+    "    # # create x,y\n",
+    "    # xx, yy = np.meshgrid(range(x_min,x_max), range(z_min,z_max))\n",
+    "    # z_ = (-normal[0] * xx - normal[1] * yy - d) * 1. /normal[2]\n",
+    "    # ax.plot_surface(xx, yy, z_, alpha=.6,color=\"red\")\n",
+    "\n",
+    "    #ax.plot([price_date[keys[quote_time]], price_date[keys[quote_time]]], [0,z_max],zs=[0,1],color='red')\n",
+    "\n",
     "    # Set labels and title\n",
     "    ax.set_xlim(x_min,x_max)\n",
-    "    ax.set_ylim(z_min,z_max)\n",
+    "    ax.set_ylim(z_min+10,z_max)\n",
     "    ax.set_zlim(0,1)\n",
-    "    ax.set_xlabel('Strike Price')\n",
+    "    ax.set_xlabel('Moneyness K/P')\n",
     "    ax.set_ylabel('Time to Expiry')\n",
     "    ax.set_zlabel('Implied Volatility')\n",
     "    ax.set_title('Surface Plot of Strike Price, Time to Expiry, and Implied Volatility')\n",
+    "\n",
     "    plt.savefig(f\"figures/{quote_time}.png\", dpi=100, bbox_inches='tight')"
    ]
   },
@@ -201,31 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1823/1823 [00:00<00:00, 1992239.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added all the images\n",
-      "Done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/1823 [00:00<?, ?it/s]/var/folders/45/b8l6mxpx0qjbw3xwyc1866480000gn/T/ipykernel_85145/1453573889.py:13: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "100%|██████████| 1823/1823 [00:00<00:00, 1686045.47it/s]\n",
+      "  0%|          | 0/1823 [00:00<?, ?it/s]/var/folders/45/b8l6mxpx0qjbw3xwyc1866480000gn/T/ipykernel_85145/2638119870.py:11: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  image = imageio.imread(filename)\n",
-      " 55%|█████▍    | 997/1823 [00:05<00:04, 184.79it/s]"
+      "100%|██████████| 1823/1823 [00:15<00:00, 118.65it/s]\n"
      ]
     }
    ],
@@ -236,15 +250,12 @@
     "images = []\n",
     "for quote_time in tqdm(range(len(keys))):\n",
     "    filenames.append(f\"figures/{quote_time}.png\")\n",
-    "    #images.append(imageio.imread(f\"figures/{quote_time}.png\"))\n",
-    "print(\"Added all the images\")\n",
-    "#imageio.mimsave('movie2.gif', images)\n",
-    "print(\"Done\")\n",
+    "\n",
+    "\n",
     "with imageio.get_writer('movie.gif', mode='I') as writer:\n",
     "    for filename in tqdm(filenames):\n",
     "        image = imageio.imread(filename)\n",
-    "        writer.append_data(image)\n",
-    "print(\"Done\")"
+    "        writer.append_data(image)\n"
    ]
   },
   {
